k8s/applications/media/plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: plex
  ports:
    - name: http
      port: 32400
      targetPort: http
